INCLUDES = -I$(top_srcdir)

lib_LTLIBRARIES = libegui.la

libegui_la_SOURCES = \
					gui.c \
					event.c \
					res.c \
					widget.c \
					bin.c \
					box.c \
					vbox.c \
					hbox.c \
					frame.c \
					fixed.c \
					window.c \
					scrollwin.c \
					layout.c \
					button.c \
					char.c \
					text.c \
					label.c \
					adjust.c \
					scrollbar.c \
					vscrollbar.c \
					hscrollbar.c \
					clist.c \
					anim.c  \
					menu.c \
					entry.c \
					spinbtn.c \
					notebook.c \
					filesel.c \
					ddlist.c \
					progressbar.c

