INCLUDES = -I$(top_srcdir)

lib_LTLIBRARIES = libegui.la

libegui_la_SOURCES = \
					gui.c \
					event.c \
					res.c \
					widget.c \
					bin.c \
					box.c \
					vbox.c \
					hbox.c \
					frame.c \
					fixed.c \
					window.c \
					scrollwin.c \
					layout.c \
					button.c \
					char.c \
					text.c \
					label.c \
					adjust.c \
					scrollbar.c \
					vscrollbar.c \
					hscrollbar.c \
					clist.c \
					anim.c  \
					menu.c \
					entry.c \
					spinbtn.c \
					notebook.c \
					filesel.c \
					ddlist.c \
					drawable.c \
					progressbar.c

# libegui_la_LIBADD =  ../elib/libelib.la ../egal/libegal.la

##libegui_la_LDFLAGS = -L/usr/local/lib -lminigui -ljpeg -lpng -lpthread

## widget_la_LIBADD = $(libglib)
